compiler/tests/invalid_programs/methods/missing_method_value_overload.jm
!TypeError

def foo(i:Int)
  puts(i)
end

fn = foo
fn("WRONG")
